--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#agendamento">Agendamento</a></li>
+                <li><a href="https://wa.me/5521990768047">Agendamento</a></li>
+                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -22,13 +23,13 @@
         <p>Seu espaço de beleza .</p>
     </section>
 
-
-    <section id="agendamento">
-        <h2>Agendamento pelo WhatsApp</h2>
-       <a href="https://wa.me/5521990768047">Clique aqui para agendar pelo WhatsApp</a>
+    <section id="servicos">
+        <h1>serviços</h1>
+        <img src="./imagens/Penteados.png" alt="penteados"><br>
+        <a href="https://wa.me/5521990768047">Agende aqui </a>
     </section>
 
-    <footer>
+    <footer id="contato">
         <p>&copy; 2025 Karol's Hair. Todos os direitos reservados.</p>
         <a href="https://wa.me/5521990768047" class="whatsapp-button">Contato via WhatsApp</a>
     </footer>
