--- a/index.html
+++ b/index.html
@@ -12,27 +12,69 @@
         <nav>
             <ul>
                 <li><a href="https://wa.me/5521990768047">Agendamento</a></li>
+                <li><a href="#hero">inicio</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#galeria">Galeria</a></li>
+                <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="#localizacao">Localização</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="hero">
         <h1>Bem-vindo à Karol's Hair</h1>
-        <p>Seu espaço de beleza .</p>
+        <p>Seu espaço de beleza.</p>
+    </section>
+
+    <section id="sobre">
+        <h1>Sobre Nós</h1>
+        <p>Na Karol's Hair, acreditamos que beleza é expressão. Nossa missão é realçar sua essência com carinho, técnica e muito estilo!</p>
     </section>
 
     <section id="servicos">
-        <h1>serviços</h1>
+        <h1>Serviços</h1>
         <img src="./imagens/Penteados.png" alt="penteados"><br>
-        <a href="https://wa.me/5521990768047">Agende aqui </a>
+        <a href="https://wa.me/5521990768047">Agende aqui</a>
     </section>
+
+    <section id="galeria">
+        <h1>Galeria</h1>
+        <img src="./imagens/antes e depois.jpg" alt="Antes e Depois" width="200">
+        <img src="./imagens/Penteados.png" alt="Estilo Trançado" width="200">
+        <img src="./imagens/antes e depois 2.jpg" alt="Antes e Depois" width="200">
+    </section>
+
+    <section id="depoimentos">
+        <h1>Depoimentos</h1>
+        <blockquote>"Simplesmente amei o atendimento e o resultado! Karol é incrível!" — Juliana M.</blockquote>
+        <blockquote>"Ambiente acolhedor e profissionalismo nota 10. Recomendo demais!" — Ana C.</blockquote>
+    </section>
+
+    <section id="localizacao">
+        <h1>Onde estamos</h1>
+        <p>Venha nos visitar! Estamos te esperando com muito carinho.</p>
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.512933853172!2d-43.467304499999996!3d-22.9821401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bdd753473b8c1%3A0x7240192ed2f70958!2sKarol&#39;s%20Hair!5e0!3m2!1spt-BR!2sbr!4v1714070238753!5m2!1spt-BR!2sbr" 
+            width="100%" 
+            height="350" 
+            style="border:0; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </section>
+    
 
     <footer id="contato">
         <p>&copy; 2025 Karol's Hair. Todos os direitos reservados.</p>
         <a href="https://wa.me/5521990768047" class="whatsapp-button">Contato via WhatsApp</a>
     </footer>
+
+    <a href="https://wa.me/5521990768047" class="whatsapp-float" target="_blank" title="Fale conosco no WhatsApp">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+    </a>    
 
 </body>
 </html>
