--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karol's Hair</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <ul>
+            <input type="checkbox" id="menu-toggle" />
+            <label for="menu-toggle" class="menu-icon">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </label>
+            <ul class="nav-list">
                 <li><a href="https://wa.me/5521990768047">Agendamento</a></li>
-                <li><a href="#hero">inicio</a></li>
+                <li><a href="#hero">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#galeria">Galeria</a></li>
@@ -41,9 +49,9 @@
 
     <section id="galeria">
         <h1>Galeria</h1>
-        <img src="./imagens/antes e depois.jpg" alt="Antes e Depois" width="200">
-        <img src="./imagens/Penteados.png" alt="Estilo Trançado" width="200">
-        <img src="./imagens/antes e depois 2.jpg" alt="Antes e Depois" width="200">
+        <img src="./imagens/antes e depois.jpg" alt="Antes e Depois">
+        <img src="./imagens/Penteados.png" alt="Estilo Trançado">
+        <img src="./imagens/antes e depois 2.jpg" alt="Antes e Depois">
     </section>
 
     <section id="depoimentos">
@@ -65,7 +73,6 @@
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </section>
-    
 
     <footer id="contato">
         <p>&copy; 2025 Karol's Hair. Todos os direitos reservados.</p>
@@ -74,7 +81,7 @@
 
     <a href="https://wa.me/5521990768047" class="whatsapp-float" target="_blank" title="Fale conosco no WhatsApp">
         <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
-    </a>    
+    </a>
 
 </body>
 </html>
