--- a/index.html
+++ b/index.html
@@ -43,21 +43,20 @@
 
     <section id="servicos">
         <h1>Serviços</h1>
-        <img src="./imagens/Penteados.png" alt="penteados"><br>
-        <a href="https://wa.me/5521990768047">Agende aqui</a>
+        <img src="imagens/Penteados.png" alt="Penteados">
+        <a href="https://wa.me/5521990768047">Agende pelo WhatsApp</a>
     </section>
 
     <section id="galeria">
         <h1>Galeria</h1>
-        <img src="./imagens/antes e depois.jpg" alt="Antes e Depois">
-        <img src="./imagens/Penteados.png" alt="Estilo Trançado">
-        <img src="./imagens/antes e depois 2.jpg" alt="Antes e Depois">
+        <img src="imagens/antes e depois.jpg" alt="Antes e depois 1">
+        <img src="imagens/antes e depois 2.jpg" alt="Antes e depois 2">
     </section>
 
     <section id="depoimentos">
         <h1>Depoimentos</h1>
-        <blockquote>"Simplesmente amei o atendimento e o resultado! Karol é incrível!" — Juliana M.</blockquote>
-        <blockquote>"Ambiente acolhedor e profissionalismo nota 10. Recomendo demais!" — Ana C.</blockquote>
+        <p>"Excelente atendimento e profissionalismo!" - Cliente A</p>
+        <p>"Amei o resultado, recomendo muito!" - Cliente B</p>
     </section>
 
     <section id="localizacao">
