--- a/index.html
+++ b/index.html
@@ -42,16 +42,20 @@
     </section>
 
     <section id="servicos">
-        <h1>Serviços</h1>
-        <img src="imagens/Penteados.png" alt="Penteados">
+    <h1>Serviços</h1>
+    <img src="imagens/Penteados.png" alt="Penteados">
+    <div class="botao-container">
         <a href="https://wa.me/5521990768047">Agende pelo WhatsApp</a>
-    </section>
+    </div>
+</section>
+
 
     <section id="galeria">
         <h1>Galeria</h1>
         <img src="imagens/antes e depois.jpg" alt="Antes e depois 1">
-        <img src="imagens/antes e depois 2.jpg" alt="Antes e depois 2">
+        <img class="img2" src="imagens/antes e depois 2.jpg" alt="Antes e depois 2">
     </section>
+
 
     <section id="depoimentos">
         <h1>Depoimentos</h1>
